<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="song"
            type="com.example.android.musicalstructureapp.Song" />
    </data>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/music_head"
            style="@style/TextHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:text="@string/your_music" />

        <TextView
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/music_head"
            android:background="#CFD8DC" />

        <TextView
            android:id="@+id/artist_text"
            style="@style/TextMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_1"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:text="@string/artists" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

        <TextView
            android:id="@+id/line_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/artist_text"
            android:background="#CFD8DC" />

        <TextView
            android:id="@+id/album_text"
            style="@style/TextMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_2"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/albums" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

        <TextView
            android:id="@+id/line_3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/album_text"
            android:background="#CFD8DC" />

        <TextView
            android:id="@+id/songs_text"
            style="@style/TextMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_3"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/songs" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_3"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

        <TextView
            android:id="@+id/line_4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/songs_text"
            android:background="#CFD8DC" />

        <TextView
            android:id="@+id/added_head"
            style="@style/TextHeadSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_4"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/recently_added" />

        <RelativeLayout
            android:id="@+id/currentSongString"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:clickable="true"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/album_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/currentSong"
                style="@style/TextCurrentSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:layout_toEndOf="@id/album_image" />

            <ImageView
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/forward"
                android:clickable="true"
                android:src="@drawable/ic_baseline_play_arrow_24" />

            <ImageView
                android:id="@+id/forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_baseline_fast_forward_24" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/added_head">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@mipmap/purplenoon" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@id/image1"
                android:src="@mipmap/treppenhaus_appache" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@id/image2"
                android:src="@mipmap/lights" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_toEndOf="@id/image3"
                android:src="@mipmap/blood" />
        </RelativeLayout>
    </RelativeLayout>
</layout>